# hs-tokstyle

./: BUILD.bazel  stack.yaml  tokstyle.cabal
doc/: BUILD.bazel  c.md  cimple.md  generate
include/: errno.h  fcntl.h  poll.h  pthread.h  stddef.h  types.h
include/sys/: time.h
src/Tokstyle/: Common.hs  Linter.hs
src/Tokstyle/Analysis/: AccessPath.hs  Dataflow.hs  Linear.hs  PointsTo.hs  Symbolic.hs  VTable.hs
src/Tokstyle/Analysis/PointsTo/: ExternalSummaries.hs  Fixpoint.hs  Types.hs
src/Tokstyle/C/: Env.hs  Linter.hs  ObjectSystem.hs  Patterns.hs  TravUtils.hs
src/Tokstyle/C/Analysis/: AccessPath.hs  CFG.hs  Dataflow.hs  Liveness.hs
src/Tokstyle/C/Linter/: BoolConversion.hs  BorrowCheck.hs  CallbackData.hs  CallbackDiscipline.hs  CallbackParams.hs  Cast.hs  Conversion.hs  Memcpy.hs  Memset.hs  SizeArg.hs  Sizeof.hs  StrictTypedef.hs  VoidCall.hs
src/Tokstyle/Cimple/Analysis/: CFG.hs  Liveness.hs
src/Tokstyle/Common/: EnumLinter.hs  StructLinter.hs  TypeSystem.hs
src/Tokstyle/Linter/: Assert.hs  BooleanReturn.hs  Booleans.hs  CallbackNames.hs  Callgraph.hs  CallocArgs.hs  CallocType.hs  CompoundInit.hs  Constness.hs  DeclaredOnce.hs  DeclsHaveDefns.hs  DocComments.hs  EnumDefines.hs  EnumNames.hs  FuncPrototypes.hs  FuncScopes.hs  GlobalFuncs.hs  LinearTypes.hs  LoggerCalls.hs  LoggerConst.hs  LoggerNoEscapes.hs  MallocCall.hs  MallocType.hs  MemcpyStructs.hs  Nesting.hs  Nullability.hs  OwnershipDecls.hs  OwnershipInference.hs  Parens.hs  PointsTo.hs  PointsToAsserts.hs  SwitchIf.hs  TaggedUnion.hs  TypeCheck.hs  TypedefName.hs  UnsafeFunc.hs  VarUnusedInScope.hs
src/Tokstyle/SemFmt/: EnumFromInt.hs  EnumToString.hs  EnumUnpack.hs  StructPack.hs
test/Tokstyle/: LinterSpec.hs
test/Tokstyle/Analysis/: DataflowSpec.hs  PointsToSpec.hs  SymbolicSpec.hs  VTableSpec.hs
test/Tokstyle/C/: LinterSpec.hs
test/Tokstyle/C/Analysis/: CFGSpec.hs  DataflowSpec.hs
test/Tokstyle/C/Linter/: BoolConversionSpec.hs  BorrowCheckSpec.hs  CallbackDataSpec.hs  CallbackDisciplineSpec.hs  CallbackParamsSpec.hs  CastSpec.hs  ConversionSpec.hs  MemcpySpec.hs  MemsetSpec.hs  SizeArgSpec.hs  SizeofSpec.hs  StrictTypedefSpec.hs  VoidCallSpec.hs
test/Tokstyle/Cimple/Analysis/: CFGSpec.hs  LivenessSpec.hs
test/Tokstyle/Linter/: AssertSpec.hs  BooleanReturnSpec.hs  BooleansSpec.hs  CallbackNamesSpec.hs  CallgraphSpec.hs  CallocArgsSpec.hs  CallocTypeSpec.hs  CompoundInitSpec.hs  ConstnessSpec.hs  DeadStoreSpec.hs  DeclaredOnceSpec.hs  DeclsHaveDefnsSpec.hs  DocCommentsSpec.hs  EnumDefinesSpec.hs  EnumNamesSpec.hs  FuncPrototypesSpec.hs  FuncScopesSpec.hs  GlobalFuncsSpec.hs  LinearTypesSpec.hs  LoggerCallsSpec.hs  LoggerConstSpec.hs  LoggerNoEscapesSpec.hs  MallocCallSpec.hs  MallocTypeSpec.hs  MemcpyStructsSpec.hs  NestingSpec.hs  NullabilitySpec.hs  OwnershipDeclsSpec.hs  OwnershipInferenceSpec.hs  ParensSpec.hs  SwitchIfSpec.hs  TaggedUnionSpec.hs  TypeCheckSpec.hs  TypedefNameSpec.hs  UnsafeFuncSpec.hs  VarUnusedInScopeSpec.hs
test/Tokstyle/SemFmt/: EnumFromIntSpec.hs  EnumToStringSpec.hs  EnumUnpackSpec.hs  StructPackSpec.hs
tools/: BUILD.bazel  check-c.hs  check-cimple.hs  tokstyle.bzl
web/Tokstyle/: App.hs
