load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project(
    custom_cirrus = True,
    license = "gpl3-https",
)

haskell_library(
    name = "common",
    srcs = [
        "src/Tokstyle/Analysis/AccessPath.hs",
        "src/Tokstyle/Analysis/Dataflow.hs",
        "src/Tokstyle/Analysis/Symbolic.hs",
        "src/Tokstyle/Common.hs",
    ] + glob(["src/Tokstyle/Common/**/*.hs"]),
    ghcopts = [
        "-j4",
    ],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:containers",
        "//third_party/haskell:data-fix",
        "//third_party/haskell:mtl",
        "//third_party/haskell:prettyprinter",
        "//third_party/haskell:prettyprinter-ansi-terminal",
        "//third_party/haskell:text",
    ],
)

haskell_library(
    name = "analysis",
    srcs = [
        "src/Tokstyle/Cimple/Analysis/CFG.hs",
        "src/Tokstyle/Cimple/Analysis/Liveness.hs",
    ] + glob(["src/Tokstyle/C/Analysis/**/*.hs"]),
    ghcopts = [
        "-j4",
    ],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":common",
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:containers",
        "//third_party/haskell:data-fix",
        "//third_party/haskell:language-c",
        "//third_party/haskell:mtl",
        "//third_party/haskell:prettyprinter",
        "//third_party/haskell:text",
    ],
)

haskell_library(
    name = "c-linters",
    srcs = glob(
        ["src/Tokstyle/C/**/*.hs"],
        exclude = ["src/Tokstyle/C/Analysis/**"],
    ),
    ghcopts = [
        "-j4",
        "-Wno-error=unused-matches",
        "-Wno-error=unused-top-binds",
    ],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":analysis",
        ":common",
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:containers",
        "//third_party/haskell:language-c",
        "//third_party/haskell:mtl",
        "//third_party/haskell:parallel",
        "//third_party/haskell:prettyprinter",
        "//third_party/haskell:prettyprinter-ansi-terminal",
        "//third_party/haskell:text",
    ],
)

haskell_library(
    name = "hs-tokstyle",
    srcs = glob(
        ["src/**/*.hs"],
        exclude = [
            "src/Tokstyle/Analysis/**",
            "src/Tokstyle/C/**",
            "src/Tokstyle/Cimple/Analysis/**",
            "src/Tokstyle/Common/**",
            "src/Tokstyle/Common.hs",
        ],
    ),
    ghcopts = [
        "-j4",
        "-Wno-incomplete-uni-patterns",
        "-Wno-unused-matches",
    ],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    version = "0.0.9",
    visibility = ["//visibility:public"],
    deps = [
        ":analysis",
        ":common",
        "//hs-cimple",
        "//third_party/haskell:aeson",
        "//third_party/haskell:array",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:casing",
        "//third_party/haskell:containers",
        "//third_party/haskell:data-fix",
        "//third_party/haskell:deepseq",
        "//third_party/haskell:edit-distance",
        "//third_party/haskell:extra",
        "//third_party/haskell:filepath",
        "//third_party/haskell:groom",
        "//third_party/haskell:hashable",
        "//third_party/haskell:language-c",
        "//third_party/haskell:microlens",
        "//third_party/haskell:microlens-th",
        "//third_party/haskell:mtl",
        "//third_party/haskell:parallel",
        "//third_party/haskell:prettyprinter",
        "//third_party/haskell:prettyprinter-ansi-terminal",
        "//third_party/haskell:text",
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    ghcopts = [
        "-j4",
        "-Wno-unused-matches",
    ],
    deps = [
        ":analysis",
        ":c-linters",
        ":common",
        ":hs-tokstyle",
        "//hs-cimple",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:containers",
        "//third_party/haskell:data-fix",
        "//third_party/haskell:groom",
        "//third_party/haskell:hashable",
        "//third_party/haskell:hspec",
        "//third_party/haskell:language-c",
        "//third_party/haskell:mtl",
        "//third_party/haskell:prettyprinter",
        "//third_party/haskell:prettyprinter-ansi-terminal",
        "//third_party/haskell:text",
    ],
)

cc_library(
    name = "headers",
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)
