[genrule(
    name = "%s_doc" % lang,
    outs = ["%s.md.new" % lang],
    cmd = "$(location //hs-tokstyle/tools:check-%s) --markdown > $@" % lang,
    tags = [
        "haskell",
        "no-cross",
    ],
    tools = ["//hs-tokstyle/tools:check-%s" % lang],
) for lang in [
    "c",
    "cimple",
]]

[sh_test(
    name = "%s_doc_test" % lang,
    size = "small",
    srcs = ["@diffutils//:diff"],
    args = [
        "-u",
        "$(location %s.md)" % lang,
        "$(location %s.md.new)" % lang,
    ],
    data = [
        "%s.md" % lang,
        "%s.md.new" % lang,
    ],
    tags = [
        "haskell",
        "no-cross",
    ],
) for lang in [
    "c",
    "cimple",
]]
